--- a/src/config.ini
+++ b/src/config.ini
@@ -1,5 +1,6 @@
 [COM]
 COMID = COM37
+COMID_QRCODE = COM30
 COMMAND1 = AT\r\n
 COMMAND100 = AT+CGDCONT=1,"IP"
 COMMAND2 = AT+CFUN=1
@@ -19,4 +20,7 @@ DeviceID = 内部产生
 AppSKey = 48F41F0491B23C804AEB9826162EB9AD //** and application session key (AppSKey) to provision ...
 DevAddr = 160115EB ////This DevAddr is a non-unique 32-bit address
 NwkSKey = D7A883537558946974B8DE31D4671617// network session key (NwkSKey),
+
+
+
 
