--- a/src/config.ini
+++ b/src/config.ini
@@ -21,6 +21,6 @@ AppSKey = 48F41F0491B23C804AEB9826162EB9AD //** and application session key (App
 DevAddr = 160115EB ////This DevAddr is a non-unique 32-bit address
 NwkSKey = D7A883537558946974B8DE31D4671617// network session key (NwkSKey),
 
-
-
+[UPDATE]
+url = docker.yulinmei.cn/loan:0.0.1-SNAPSHOT
 
