--- a/src/cmd/Dockerfile.multi
+++ b/src/cmd/Dockerfile.multi
@@ -3,7 +3,9 @@ RUN mkdir /build
 ADD . /build/
 WORKDIR /build
 RUN go build -o main .
-FROM alpine
+RUN CGO_ENABLED=0 GOOS=linux go build -o main ./...
+
+FROM alpine:latest AS production
 RUN adduser -S -D -H -h /app appuser
 USER appuser
 COPY --from=builder /build/main /app/
